﻿[B][COLOR=FF56ADDA]v4.1.1[/COLOR][/B]
• Added: Option to change the common widget content on the fly without moving to the skin settings menu (can be locked)
• Added: IMDb250 for the movie widgets
• Added: YouTube Widget
• Added: Recently Watched Episodes for the TV shows widget (for people like me, who alwasy fell asleep while watching an episode :P)
• Fixed: Wrong conditions for AddonScriptorDE's widget
• Fixed: Wrong IMDb flag icon dimensions
• Fixed: Fake OnNext/OnPrevious music widget animation
• Changed: Hundreds of conditions/animations/code lines

[B][COLOR=FF56ADDA]v4.1.0[/COLOR][/B]
• Reworked: Settings and skin settings windows for an buddy - Andre... Yes, I mean you! - who is too much noob to find some settings. Damn noobs :P
• Replaced: Navigation sounds (THX to ReFocus skin)
• Added: Option to run IMDb rating updates automatically
• Added: Optional Kodi Symbol on Home
• Fixed: Missing Option to disable ThumbList for Music Views
• Fixed: ThumbList blue shine texture
• Fixed: Some addon widgets were available even the required addon was not installed
• Updated: Latest GER + LT + IT translations
• Updated: Script.imdbupdate version requirement pushed to 0.6.0

[B][COLOR=FF56ADDA]v4.0.17a[/COLOR][/B]
• Fixed: Bug with textures.xbt

[B][COLOR=FF56ADDA]v4.0.17[/COLOR][/B]
• Added: New default theme
• Added: Original-Bello theme
• Fixed: FSK6 rating flag
• Fixed: LoveFilm CDArt animation

[B][COLOR=FF56ADDA]v4.0.16[/COLOR][/B]
• Fixed: Thumb List focuslayout
• Added: IMDb Top250 on Thumb List
• Added: ElegantDark theme for those guys who don't like the purple
• Changed: Bigger posters for LoveFilm

[B][COLOR=FF56ADDA]v4.0.15[/COLOR][/B]
• Added: IMDB Top250 indicator for NetFilx + LoveFilm
• Added: Library update options for refreshing Top250 list and updating movie ratings (new addon requirement: script.imdbupdate)
• Added: Thumb List view for music
• Fixed: Diffuse overlay issue with the widget context menu
• Fixed: Label position in the chapter dialog
