@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="skin.bellofredo" version="4.1.1" name="Bello Fredo" provider-name="sualfred">
+<addon id="skin.bellofredo" version="4.1.1a" name="Bello Fredo" provider-name="sualfred">
   <requires>
 		<import addon="xbmc.gui" version="5.8.0" />
 		<import addon="service.skin.widgets" version="0.0.29"/>
@@ -22,7 +22,6 @@
 		<import addon="script.imdbupdate" version="0.6.0" />		
 		<import addon="context.extendedinfo.dialog" version="0.1.0" />		
 		<import addon="context.getextraart.dialog" version="0.1.0" />		
-		<import addon="plugin.video.youtube" version="5.1.0" />		
 	</requires>
 	<extension point="xbmc.gui.skin" defaultthemename="BelloFredo.xbt" effectslowdown="0.75" debugging="false">
 	    <res width="1280" height="720" aspect="16:9" default="true" folder="720p"/>
